# optimising-cryptocurrency-portfolios

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  deployment.md  faq.md  getting-started.md  production-readiness.md
src/cps/: __init__.py  cli.py  data.py  execution.py  forecast.py  governance.py  metrics.py  networking.py  observability.py  pipeline.py  portfolio.py  resilience.py  risk.py  runner.py  types.py
tests/: test_cli_and_error_paths.py  test_data.py  test_forecast_network_portfolio.py  test_governance.py  test_metrics_and_cli.py  test_pipeline.py  test_production_features.py  test_resilience.py
