[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-portfolio-system"
version = "0.1.0"
description = "Consensus-clustered cryptocurrency portfolio construction"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "networkx>=3.1",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1"
]

[project.scripts]
crypto-portfolio = "cps.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cps"]

[tool.coverage.report]
show_missing = true
skip_covered = false
